--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1087,7 +1087,7 @@
 
 /* Background section */
 .section--bg {
-    background: url("/images/smp.jpg") no-repeat center center/cover;
+    background: url("https://raw.githubusercontent.com/hoiyannyc/inkroot/refs/heads/main/images/smp.jpg") no-repeat center center/cover;
     padding: 80px 20px;
     position: relative;
   }
